<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_about_user"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about_user" />
        <item
            android:id="@+id/nav_autorizate"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/menu_autorization" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_registry_user" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
    </group>
</menu>