<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chat">


    <fragment
        android:id="@+id/nav_chat"
        android:name="com.orion.messenger.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_about_user"
        android:name="com.orion.messenger.ui.user.AboutUserFragment"
        android:label="@string/menu_about_user"
        tools:layout="@layout/fragment_about_user" />
    <fragment
        android:id="@+id/nav_autorizate"
        android:name="com.orion.messenger.ui.user.AutorizateFragment"
        android:label="@string/menu_autorization"
        tools:layout="@layout/fragment_autorizate" />
    <fragment
        android:id="@+id/nav_registration"
        android:name="com.orion.messenger.ui.user.RegistrationFragment"
        android:label="@string/menu_registry_user"
        tools:layout="@layout/fragment_registration" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.orion.messenger.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    
</navigation>