<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.AutorizateFragment"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/padding_external"
        android:padding="@dimen/padding_external"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/font_header"
            android:text="@string/autorizate_title"
            android:layout_marginBottom="@dimen/padding_external"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_external"
            android:textSize="@dimen/font_default"
            android:hint="@string/autorizate_login"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_default"
            android:hint="@string/autorizate_password"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/padding_external"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_rect"
            android:textColor="@color/white"
            android:text="@string/autorizate_send"
            android:id="@+id/send_data"
            android:layout_marginTop="@dimen/padding_external"/>
    </LinearLayout>

</FrameLayout>