<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.RegistrationFragment"
    android:id="@+id/registration_fragment"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_external"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_header"
            android:text="@string/registr_title"
            android:layout_marginBottom="@dimen/padding_external"
            android:textColor="@color/white" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_external"
            android:layout_marginBottom="@dimen/padding_external">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:text="@string/registr_login"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:layout_weight="5"
                    android:textColor="@color/white"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:text="@string/registr_alias"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/alias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:layout_weight="5"
                    android:textColor="@color/white"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:text="@string/registr_email"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:layout_weight="5"
                    android:textColor="@color/white"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:text="@string/registr_password"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:layout_weight="5"
                    android:textColor="@color/white"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:text="@string/registr_password1"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/password1"
                    android:inputType="textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_default"
                    android:layout_weight="5"
                    android:textColor="@color/white"/>
            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_rect"
            android:textColor="@color/white"
            android:text="@string/registr_send"
            android:id="@+id/send"
            android:layout_marginTop="@dimen/padding_external"/>
    </LinearLayout>

</FrameLayout>