<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.AppendUserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey1"
        android:alpha="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        android:background="@color/grey1"
        android:layout_marginHorizontal="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="@dimen/padding_external"
            android:text="@string/append_user_title"
            android:textSize="@dimen/font_sub_header"
            android:background="@color/black"
            android:textColor="@color/white"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_external">
            <TableRow>
                <EditText
                    android:id="@+id/search_alias"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:hint="@string/append_user_alias"
                    android:textColorHint="@color/white"
                    android:layout_margin="@dimen/padding_left"
                    android:background="@color/grey2"
                    android:padding="@dimen/padding_external"
                    android:layout_weight="6"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_search"
                    android:id="@+id/search_user"
                    android:layout_weight="1"
                    android:background="@color/grey1"
                    android:tooltipText="@string/search_user"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/search_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColorHint="@color/white"
                    android:layout_margin="@dimen/padding_left"
                    android:background="@color/grey2"
                    android:padding="@dimen/padding_external"
                    android:hint="@string/append_user_phone"
                    android:layout_weight="6"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/append_user"
                    android:background="@color/grey1"
                    android:src="@android:drawable/ic_input_add"
                    android:tooltipText="@string/append_user"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/search_list_users"
            android:background="@color/grey2"
            android:padding="@dimen/padding_external">
        </ListView>

    </LinearLayout>

</FrameLayout>